force-app/main/default/objects/Family_Member_Attendance__c/Family_Member_Attendance__c.object-meta.xml
<CustomObject>
    <description>Used for recording individual family member attendances on programs linked to family attendance</description>
    <label>Family Member Attendance</label>
    <nameField>
        <displayFormat>FMA{00000}</displayFormat>
        <label>Family Member Attendance</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Family Member Attendance</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>