force-app/main/default/objects/Family_Member_Attendance__c/fields/Activity_restrictions__c.field-meta.xml
<CustomField>
    <fullName>Activity_restrictions__c</fullName>
    <inlineHelpText>Child have any restrictions or support needs with activities (contact sports,cannot swim)</inlineHelpText>
    <label>Activity restrictions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Field</valueSetName>
    </valueSet>
</CustomField>