force-app/main/default/objects/Family_Member_Attendance__c/fields/Age_Numeric__c.field-meta.xml
<CustomField>
    <fullName>Age_Numeric__c</fullName>
    <formula>Contact__r.Age__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age Numeric</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>