force-app/main/default/objects/Family_Member_Attendance__c/fields/Attendance__c.field-meta.xml
<CustomField>
    <fullName>Attendance__c</fullName>
    <label>Attendance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invited</fullName>
            </value>
            <value>
                <fullName>Request to Attend</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Attended</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Unsuccessful</fullName>
            </value>
            <value>
                <fullName>No Show</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Cancelled &lt; 24 hours</fullName>
            </value>
            <value>
                <fullName>Medical Withdrawal</fullName>
            </value>
            <value>
                <fullName>Unsuccessful – Waitlist</fullName>
            </value>
            <value>
                <fullName>Unsuccessful – Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>