force-app/main/default/objects/Family_Member_Attendance__c/fields/Behavioural_Support__c.field-meta.xml
<CustomField>
    <fullName>Behavioural_Support__c</fullName>
    <label>Behavioural Support</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Triggers</fullName>
            </value>
            <value>
                <fullName>Transition (change)</fullName>
            </value>
            <value>
                <fullName>Runner/ absconder</fullName>
            </value>
            <value>
                <fullName>Impulse control</fullName>
            </value>
            <value>
                <fullName>Anxiety</fullName>
            </value>
            <value>
                <fullName>Aggression</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>