force-app/main/default/objects/Family_Member_Attendance__c/fields/Child_Immunisation_Schedule_Current__c.field-meta.xml
<CustomField>
    <fullName>Child_Immunisation_Schedule_Current__c</fullName>
    <inlineHelpText>Child Immunisation Schedule current to the relevant state health book.  http://www.immunise.health.gov.au/internet/immunise/publishing.nsf/Content/national-immunisation-program-schedule</inlineHelpText>
    <label>Child Immunisation Schedule Current</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>