force-app/main/default/objects/Family_Member_Attendance__c/fields/Companion__c.field-meta.xml
<CustomField>
    <fullName>Companion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Companion</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Event__c</field>
            <operation>equals</operation>
            <valueField>Volunteer_Attendance__c.Event__c</valueField>
        </filterItems>
        <infoMessage>The volunteer attendance record must be for the same event.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Volunteer_Attendance__c</referenceTo>
    <relationshipLabel>Companion Children</relationshipLabel>
    <relationshipName>Companion_Children</relationshipName>
    <type>Lookup</type>
</CustomField>