force-app/main/default/objects/Family_Member_Attendance__c/fields/Companion_Name__c.field-meta.xml
<CustomField>
    <fullName>Companion_Name__c</fullName>
    <formula>Companion__r.Volunteer__r.FirstName &amp; &quot; &quot; &amp; Companion__r.Volunteer__r.LastName</formula>
    <label>Companion Name</label>
    <type>Text</type>
</CustomField>