force-app/main/default/objects/Family_Member_Attendance__c/fields/Companion_Preferred_Name__c.field-meta.xml
<CustomField>
    <fullName>Companion_Preferred_Name__c</fullName>
    <formula>Companion__r.Volunteer__r.Preferred_First_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Companion Preferred Name</label>
    <type>Text</type>
</CustomField>