force-app/main/default/objects/Family_Member_Attendance__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Family Member Attendance</relationshipLabel>
    <relationshipName>Family_Member_Attendance</relationshipName>
    <type>Lookup</type>
</CustomField>