force-app/main/default/objects/Family_Member_Attendance__c/fields/Daily_routine_support__c.field-meta.xml
<CustomField>
    <fullName>Daily_routine_support__c</fullName>
    <inlineHelpText>What support does the child need in daily routines</inlineHelpText>
    <label>Daily routine support</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Meal Time</fullName>
            </value>
            <value>
                <fullName>Bedtime</fullName>
            </value>
            <value>
                <fullName>Hygiene</fullName>
            </value>
            <value>
                <fullName>Activities</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>