force-app/main/default/objects/Family_Member_Attendance__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Family Member Attendance</relationshipLabel>
    <relationshipName>Family_Member_Attendance</relationshipName>
    <type>Lookup</type>
</CustomField>