force-app/main/default/objects/Family_Member_Attendance__c/fields/Event_Trpe__c.field-meta.xml
<CustomField>
    <fullName>Event_Trpe__c</fullName>
    <formula>text(Event__r.Event_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Trpe</label>
    <type>Text</type>
</CustomField>