force-app/main/default/objects/Family_Member_Attendance__c/fields/Family_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Family_Attendance__c</fullName>
    <label>Family Attendance</label>
    <referenceTo>Family_Attendance__c</referenceTo>
    <relationshipLabel>Family Member Attendance</relationshipLabel>
    <relationshipName>Family_Member_Attendance</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>