force-app/main/default/objects/Family_Member_Attendance__c/fields/Family_Member_Attendance_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Family_Member_Attendance_External_Id__c</fullName>
    <description>Event External Id + Contact External ID</description>
    <externalId>true</externalId>
    <label>Family Member Attendance External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>