force-app/main/default/objects/Family_Member_Attendance__c/fields/Household__c.field-meta.xml
<CustomField>
    <fullName>Household__c</fullName>
    <formula>Contact__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Household</label>
    <type>Text</type>
</CustomField>