force-app/main/default/objects/Family_Member_Attendance__c/fields/Is_child_1__c.field-meta.xml
<CustomField>
    <fullName>Is_child_1__c</fullName>
    <formula>IF(CONTAINS( Family_Member_Status__c , &quot;Child&quot;), &quot;Child&quot;, &quot;Adult&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is child</label>
    <type>Text</type>
</CustomField>