force-app/main/default/objects/Family_Member_Attendance__c/fields/Is_child__c.field-meta.xml
<CustomField>
    <fullName>Is_child__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is family member under 18. Checked = True</description>
    <label>Is child?</label>
    <type>Checkbox</type>
</CustomField>