force-app/main/default/objects/Family_Member_Attendance__c/fields/IsAgeCamp__c.field-meta.xml
<CustomField>
    <fullName>IsAgeCamp__c</fullName>
    <description>Is this an age camp, check event record type</description>
    <formula>if( Event__r.RecordType.DeveloperName =&quot;Age_Camp&quot;, true,false)</formula>
    <inlineHelpText>Is this an age camp, check event record type</inlineHelpText>
    <label>Is Age Camp</label>
    <type>Checkbox</type>
</CustomField>