force-app/main/default/objects/Family_Member_Attendance__c/fields/Last_Chemo_Dose_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Chemo_Dose_Date__c</fullName>
    <label>Last Chemo Dose Date</label>
    <type>Date</type>
</CustomField>