force-app/main/default/objects/Family_Member_Attendance__c/fields/Medical_Form_Status__c.field-meta.xml
<CustomField>
    <fullName>Medical_Form_Status__c</fullName>
    <label>Medical Form Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>