force-app/main/default/objects/Family_Member_Attendance__c/fields/Medication__c.field-meta.xml
<CustomField>
    <fullName>Medication__c</fullName>
    <label>Medication</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asthma - Puffer/medication</fullName>
            </value>
            <value>
                <fullName>Epi-pen</fullName>
            </value>
            <value>
                <fullName>Medication - Original packaging</fullName>
            </value>
            <value>
                <fullName>Medication - Webster Pack</fullName>
            </value>
            <value>
                <fullName>Vitamins - Original packaging</fullName>
            </value>
            <value>
                <fullName>Vitamins - Webster Pack</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>