force-app/main/default/objects/Family_Member_Attendance__c/fields/Medication_and_Vitamins__c.field-meta.xml
<CustomField>
    <fullName>Medication_and_Vitamins__c</fullName>
    <label>Medication and Vitamins</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Webster Pack</fullName>
                <label>Webster Pack or Signed Management Plan</label>
            </value>
            <value>
                <fullName>Original Packaging</fullName>
            </value>
            <value>
                <fullName>Webster Pack or Signed Management Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>