force-app/main/default/objects/Family_Member_Attendance__c/fields/OTC_Comments__c.field-meta.xml
<CustomField>
    <fullName>OTC_Comments__c</fullName>
    <label>OTC Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>