force-app/main/default/objects/Family_Member_Attendance__c/fields/OTC_Standard__c.field-meta.xml
<CustomField>
    <fullName>OTC_Standard__c</fullName>
    <description>This field indicates whether a family gives us permission to give:
Paracetamol  
Throat lozenges 
Anti-Inflammatory          	            	
Antiseptic based creams
Antihistamine tablets</description>
    <inlineHelpText>This field indicates whether a family gives us permission to give their child the following treatments:
Paracetamol  
Throat lozenges 
Anti-Inflammatory          	            	
Antiseptic based creams
Antihistamine tablets</inlineHelpText>
    <label>Permission for OTC Standard Treatments</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>