force-app/main/default/objects/Family_Member_Attendance__c/fields/Phone_call_required__c.field-meta.xml
<CustomField>
    <fullName>Phone_call_required__c</fullName>
    <inlineHelpText>Family would like to discuss further over a phone call</inlineHelpText>
    <label>Phone call required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Field</valueSetName>
    </valueSet>
</CustomField>