force-app/main/default/objects/Family_Member_Attendance__c/fields/Requires_Doctors_Form__c.field-meta.xml
<CustomField>
    <fullName>Requires_Doctors_Form__c</fullName>
    <description>Calculated field that determines if someone needs a med form</description>
    <formula>if( text(Currently_on_Treatment__c) = &quot;Yes&quot;,True,if ( text(Medication_and_Vitamins__c)=&quot;Original Packaging&quot;, True,False ))</formula>
    <inlineHelpText>This field shows whether a child needs a med form based on rego information</inlineHelpText>
    <label>Requires Doctors Form</label>
    <type>Checkbox</type>
</CustomField>