force-app/main/default/objects/Family_Member_Attendance__c/fields/Requires_Medication_or_Vitamins__c.field-meta.xml
<CustomField>
    <fullName>Requires_Medication_or_Vitamins__c</fullName>
    <label>Requires Medication or Vitamins</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>