force-app/main/default/objects/Family_Member_Attendance__c/fields/Special_Celebration__c.field-meta.xml
<CustomField>
    <fullName>Special_Celebration__c</fullName>
    <label>Special Celebration</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>