force-app/main/default/objects/Family_Member_Attendance__c/fields/Transport_Drop_Off_Location__c.field-meta.xml
<CustomField>
    <fullName>Transport_Drop_Off_Location__c</fullName>
    <label>Transport-Getting Home-Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Transport_Locations</valueSetName>
    </valueSet>
</CustomField>