force-app/main/default/objects/Family_Member_Attendance__c/fields/Transport_Drop_Off_Time__c.field-meta.xml
<CustomField>
    <fullName>Transport_Drop_Off_Time__c</fullName>
    <label>Transport-Getting Home-Time</label>
    <length>20</length>
    <type>Text</type>
</CustomField>