force-app/main/default/objects/Family_Member_Attendance__c/fields/Transport_Pick_Up_Required__c.field-meta.xml
<CustomField>
    <fullName>Transport_Pick_Up_Required__c</fullName>
    <label>Transport-Getting to Camp-Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>