force-app/main/default/objects/Family_Member_Attendance__c/fields/Transport_Pick_Up_Time__c.field-meta.xml
<CustomField>
    <fullName>Transport_Pick_Up_Time__c</fullName>
    <label>Transport-Getting to Camp-Time</label>
    <length>20</length>
    <type>Text</type>
</CustomField>