force-app/main/default/objects/Family_Member_Attendance__c/recordTypes/Aged_Camp_Layout.recordType-meta.xml
<RecordType>
    <fullName>Aged_Camp_Layout</fullName>
    <active>true</active>
    <label>Aged Camp Layout</label>
</RecordType>