force-app/main/default/objects/Family_Member_Attendance__c/recordTypes/Program_Layout.recordType-meta.xml
<RecordType>
    <fullName>Program_Layout</fullName>
    <active>true</active>
    <label>Program Layout</label>
</RecordType>