force-app/main/default/objects/Family_Member_Attendance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Contact__c</columns>
    <columns>NAME</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Attendance__c</columns>
    <columns>Event_Name__c</columns>
    <columns>Family_Attendance__c</columns>
    <columns>Family_Member_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Event_Name__c</field>
        <operation>contains</operation>
        <value>NAT2212 Virtual Camp 4</value>
    </filters>
    <filters>
        <field>Attendance__c</field>
        <operation>equals</operation>
        <value>Accepted</value>
    </filters>
    <label>All</label>
</ListView>