force-app/main/default/objects/Family_Member_Attendance__c/listViews/Family_Member_Attendance_ACT.listView-meta.xml
<ListView>
    <fullName>Family_Member_Attendance_ACT</fullName>
    <columns>Event__c</columns>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Age__c</columns>
    <columns>Companion__c</columns>
    <columns>Companion_Name__c</columns>
    <columns>Transport_Pick_Up_Location__c</columns>
    <columns>Transport_Pick_Up_Time__c</columns>
    <columns>Transport_Drop_Off_Location__c</columns>
    <columns>Transport_Drop_Off_Time__c</columns>
    <columns>Participant_Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Event__c</field>
        <operation>equals</operation>
        <value>SNSW1804 Middle Camp</value>
    </filters>
    <filters>
        <field>Attendance__c</field>
        <operation>equals</operation>
        <value>Request to Attend,Accepted</value>
    </filters>
    <label>Family Member Attendance ACT</label>
    <sharedTo>
        <roleAndSubordinatesInternal>GM_Programs_Services</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>