force-app/main/default/objects/Family_Member_Attendance__c/listViews/Family_Member_Attendance_TAS.listView-meta.xml
<ListView>
    <fullName>Family_Member_Attendance_TAS</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Age__c</columns>
    <columns>Companion_Name__c</columns>
    <columns>Companion__c</columns>
    <columns>Transport_Pick_Up_Location__c</columns>
    <columns>Transport_Pick_Up_Time__c</columns>
    <columns>Transport_Drop_Off_Location__c</columns>
    <columns>Transport_Drop_Off_Time__c</columns>
    <columns>Attendance__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Event__c</field>
        <operation>equals</operation>
        <value>TAS2302 Combo Camp</value>
    </filters>
    <filters>
        <field>Attendance__c</field>
        <operation>equals</operation>
        <value>Accepted,Attended</value>
    </filters>
    <label>Family Member Attendance TAS</label>
    <sharedTo>
        <roleAndSubordinatesInternal>GM_Programs_Services</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>