force-app/main/default/objects/Family_Member_Attendance__c/listViews/Family_Member_Attendance_WA.listView-meta.xml
<ListView>
    <fullName>Family_Member_Attendance_WA</fullName>
    <columns>Event__c</columns>
    <columns>Family_Member_Type__c</columns>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Age__c</columns>
    <columns>Companion_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Event__c</field>
        <operation>equals</operation>
        <value>WA2210 Combo Camp</value>
    </filters>
    <filters>
        <field>Attendance__c</field>
        <operation>equals</operation>
        <value>Request to Attend,Accepted</value>
    </filters>
    <label>Family Member Attendance WA</label>
    <sharedTo>
        <roleAndSubordinatesInternal>GM_Programs_Services</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>