force-app/main/default/objects/Family_Member_Attendance__c/listViews/Vic_Otway_Fly_FE.listView-meta.xml
<ListView>
    <fullName>Vic_Otway_Fly_FE</fullName>
    <columns>Event__c</columns>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Age__c</columns>
    <columns>Participant_Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Event__c</field>
        <operation>equals</operation>
        <value>VIC1705-12 Otway Fly Family Experience</value>
    </filters>
    <filters>
        <field>Attendance__c</field>
        <operation>equals</operation>
        <value>Request to Attend,Accepted,Attended</value>
    </filters>
    <label>Vic Otway Fly FE</label>
    <sharedTo></sharedTo>
</ListView>